--- a/pod.yaml
+++ b/pod.yaml
@@ -12,4 +12,6 @@ spec:
   containers:
   - image: busybox
     name: busybox
+    command: ["printenv"]
+    args: ["HOSTNAME", "KUBERNETES_PORT"]
   serviceAccountName: vault-auth
